manifests/mediawiki_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: mediawiki
  name: mediawiki
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: mediawiki
